# business-management-control-system

./: README.md  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/routers/: __init__.py  auth.py  department.py  employee.py  position.py  task.py  user.py
src/api/v1/services/: auth.py  department.py  employee.py  position.py  task.py  user.py
src/database/: db.py
src/models/: __init__.py  company.py  department.py  invite.py  member.py  position.py  task.py  user.py
src/repositories/: __init__.py  company.py  department.py  invite.py  member.py  position.py  task.py  user.py
src/schemas/: auth.py  department.py  employee.py  position.py  task.py  user.py
src/utils/: custom_types.py  exceptions.py  repository.py  service.py  unit_of_work.py
src/utils/auth/: authorize_utils.py  invite_token_utils.py  jwt_utils.py  password_utils.py
src/utils/mail/: service.py
tests/: conftest.py  utils.py
tests/fixtures/: __init__.py
tests/fixtures/postgres/: __init__.py  company.py  department.py  invite.py  position.py  task.py  user.py
tests/fixtures/test_cases/: __init__.py  auth.py  company.py
tests/unit/: conftest.py
tests/unit/api/v1/routers/: test_auth_router.py
tests/unit/utils/: test_repository.py
