[tool.poetry]
name = "business-management-control-system-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.1"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
ruff = "^0.6.4"
pydantic = {extras = ["email"], version = "^2.9.1"}
sqlalchemy-utils = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
