[tool.poetry]
name = "business-management-control-system-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.1"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
ruff = "^0.6.4"
pydantic = {extras = ["email"], version = "^2.9.1"}
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
pyjwt = "2.8.0"
cryptography = "^43.0.1"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
